--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <header>
-    <img src="/mnt/data/Logo JuAnimalia terminado.png" alt="Logo JuAnimalia">
+    <img src="imagenes/logo.png" alt="Logo JuAnimalia" />
     <h1>JuAnimalia</h1>
     <p>Divulgación científica sobre animales desde la biología</p>
   </header>
